// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetStatistics Component Render the TargetStatistics Component having populated props with no errors 1`] = `
<TargetStatistics
  targets={
    Array [
      Object {
        "dec": 0,
        "optional": true,
        "ra": 0,
        "targetId": "Target: Target_Id 18378 Target_Id 18378 Name: 0, dtype: object",
      },
      Object {
        "dec": 358.333,
        "optional": true,
        "ra": 231.25,
        "targetId": "Target: Target_Id 18378 Target_Id 18378 Name: 0, dtype: object",
      },
    ]
  }
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    <h2>
      Target Statistics
    </h2>
    <table
      className="stat-table"
      style={
        Object {
          "height": "90%",
        }
      }
    >
      <thead>
        <tr>
          <th />
          <th>
            Totals
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Number of Targets
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            Number of Mandatory Targets
          </td>
          <td>
            0
             
          </td>
        </tr>
        <tr>
          <td>
            Number of Optional Targets  
          </td>
          <td>
            2
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</TargetStatistics>
`;

exports[`TargetStatistics Component Render the TargetStatistics Component having unpopulated props with no errors 1`] = `
<TargetStatistics
  targets={Array []}
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    <h2>
      Target Statistics
    </h2>
    <table
      className="stat-table"
      style={
        Object {
          "height": "90%",
        }
      }
    >
      <thead>
        <tr>
          <th />
          <th>
            Totals
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Number of Targets
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Number of Mandatory Targets
          </td>
          <td>
            0
             
          </td>
        </tr>
        <tr>
          <td>
            Number of Optional Targets  
          </td>
          <td>
            0
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</TargetStatistics>
`;
